cmake_minimum_required(VERSION 3.23)
project(Assignment1)

set(CMAKE_CXX_STANDARD 14)

add_executable(ex2_19 ex2_19_main.cpp)
add_executable(ex2_24 ex2_24_main.cpp)
add_executable(ex2_25 ex2_25_main.cpp)
add_executable(ex2_28 ex2_28_main.cpp)
add_executable(ex3_11 ex3_11_main_GradeBook.cpp GradeBook.cpp GradeBook.h)
add_executable(ex3_12 ex3_12_main_Account.cpp Account.cpp Account.h)
add_executable(ex3_13 ex3_13_main_Invoice.cpp Invoice.cpp Invoice.h)
add_executable(ex3_14 ex3_14_main_Employee.cpp Employee.cpp Employee.h)
add_executable(ex3_15 ex3_15_main_Date.cpp Date.cpp Date.h)
add_executable(ex4_13 ex4_13_main.cpp)
add_executable(ex4_26 ex4_26_main.cpp)
add_executable(ex4_27 ex4_27_main.cpp)
add_executable(ex4_34 ex4_34_main.cpp)
add_executable(ex4_35d ex4_35_decrypt_main.cpp)
add_executable(ex4_35e ex4_35_encrypt_main.cpp)


