cmake_minimum_required(VERSION 3.23)
project(Assignment3)

set(CMAKE_CXX_STANDARD 14)

add_executable(ex6_16 ex6_16.cpp)
add_executable(ex6_17 ex6_17.cpp)
add_executable(ex6_18 ex6_18.cpp)
add_executable(ex6_26 ex6_26.cpp)
add_executable(ex6_28 ex6_28.cpp)
add_executable(ex6_29 ex6_29.cpp)
add_executable(ex6_31 ex6_31.cpp)
add_executable(ex6_36 ex6_36.cpp)
add_executable(ex6_37 ex6_37.cpp)
add_executable(ex6_38 ex6_38.cpp)
add_executable(ex6_39 ex6_39.cpp)
add_executable(ex6_41 ex6_41.cpp)
add_executable(ex6_42 ex6_42.cpp)
add_executable(ex6_50 ex6_50.cpp)