cmake_minimum_required(VERSION 3.23)
project(Assignment5)

set(CMAKE_CXX_STANDARD 14)

add_executable(ex8_8 ex8_8.cpp)
add_executable(ex8_10 ex8_10.cpp)
add_executable(ex8_11 ex8_11.cpp)
add_executable(ex8_13 ex8_13.cpp)
add_executable(ex8_14 ex8_14.cpp)
add_executable(ex8_15 ex8_15.cpp)
add_executable(ex8_16 ex8_16.cpp)
